kubernetes-basics/log-output-no-split/manifests/deployment-persistent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logoutput-dep-persistent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      namespace: exercises
      labels:
        app: logoutput
    spec:
      containers:
        - name: logoutput
          image: melinadevops/log_output:v2
          volumeMounts:
            - name: config
              mountPath: /etc/config

      volumes:
        - name: config
          configMap:
            name: log-output-configmap
