kubernetes-basics/log-output-no-split/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logoutput-svc
spec:
  type: ClusterIP
  selector:
    app: logoutput
  ports:
    - port: 2425
      protocol: TCP
      targetPort: 3000
