kubernetes-basics/log-output-no-split/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-pong-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: logoutput-svc
                port:
                  number: 80
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: pingpong-svc
                port:
                  number: 80
          - path: /pings
            pathType: Prefix
            backend:
              service:
                name: pingpong-svc
                port:
                  number: 80
